cabal-version:       2.4
name:                arvy
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          contact@infinisil.com
category:            Network
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  exposed-modules:     Arvy
                       Arvy.Algorithm
                       Arvy.Algorithm.Collection
                       Arvy.Local
  build-depends:       base ^>=4.12.0.0
                     , polysemy
                     , polysemy-plugin
                     , array
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , LambdaCase
                     , QuantifiedConstraints
                     , AllowAmbiguousTypes
                     , RecordWildCards
                     , NamedFieldPuns
                     , KindSignatures
                     , BlockArguments
                     , MultiParamTypeClasses

library arvy-eval
  hs-source-dirs:      eval
  default-language:    Haskell2010
  ghc-options:         -Wall -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  exposed-modules:     Parameters
                     , Parameters.Weights
                     , Parameters.Tree
                     , Parameters.Requests
                     , Evaluation
                     , Evaluation.Tree
                     , Utils
                     , Utils.Connected
  build-depends:       base ^>=4.12.0.0
                     , arvy
                     , polysemy
                     , polysemy-plugin
                     , polysemy-RandomFu
                     , random-fu
                     , mwc-random
                     , random-source
                     , deepseq
                     , array
                     , time
                     , vector
                     , algebraic-graphs
                     , containers
                     , multiset
                     , heaps
  default-extensions:  TypeApplications
                     , LambdaCase
                     , BlockArguments
                     , TypeOperators
                     , DataKinds
                     , FlexibleContexts
                     , GADTs
                     , RecordWildCards
                     , RankNTypes
                     , NamedFieldPuns
                     , ScopedTypeVariables
  
executable arvy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  build-depends:       base ^>=4.12.0.0
                     , arvy
                     , arvy-eval
                     , array
                     , polysemy
                     , polysemy-zoo
                     , polysemy-plugin
                     , algebraic-graphs
                     , time
                     , random
                     , deepseq
                     , polysemy-RandomFu
                     , mwc-random
                     , random-source
                     , vector
                     , containers
                     , multiset
                     , random-fu
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies
                     , LambdaCase
                     , QuantifiedConstraints
                     , AllowAmbiguousTypes
                     , RecordWildCards
                     , NamedFieldPuns
                     , TupleSections

test-suite arvy-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  build-depends:       base ^>=4.12.0.0
                     , arvy
                     , arvy-eval
                     , hspec
                     , array
                     , polysemy
                     , polysemy-zoo
                     , random
                     , containers
                     , deepseq
  default-language:    Haskell2010
