cabal-version:       2.4
name:                arvy
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          contact@infinisil.com
category:            Network
extra-source-files:  CHANGELOG.md

common defaults
  default-language:    Haskell2010
  ghc-options:         -Wall -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  build-depends:       base ^>= 4.12.0.0
                     , polysemy
                     , polysemy-plugin
                     , polysemy-plugin
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , LambdaCase
                     , QuantifiedConstraints
                     , AllowAmbiguousTypes
                     , RecordWildCards
                     , NamedFieldPuns
                     , KindSignatures
                     , BlockArguments
                     , MultiParamTypeClasses

library
  import:              defaults
  hs-source-dirs:      lib
  exposed-modules:     Arvy.Algorithm
                       Arvy.Algorithm.Collection
                       Arvy.Local
                       Arvy.Pure
  build-depends:       array
                     , mono-traversable
                     , containers
                     , conduit
                     , polysemy-RandomFu
                     , random-fu

library arvy-eval
  import:              defaults
  hs-source-dirs:      eval
  exposed-modules:     Parameters
                     , Parameters.Weights
                     , Parameters.Tree
                     , Parameters.Requests
                     , Parameters.Algorithm
                     , Evaluation
                     , Evaluation.Types
                     , Evaluation.Weights
                     , Evaluation.Tree
                     , Evaluation.Request
                     , Evaluation.Utils
                     , Utils
                     , Utils.Connected
                     , Utils.Parmap
                     , Cache
  build-depends:       arvy
                     , polysemy-RandomFu
                     , random-fu
                     , mwc-random
                     , random-source
                     , deepseq
                     , array
                     , time
                     , vector
                     , algebraic-graphs
                     , containers
                     , multiset
                     , heaps
                     , conduit
                     , store
                     , directory
                     , filepath
                     , bytestring
                     , async

executable arvy
  import:              defaults
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , arvy
                     , arvy-eval
                     , array
                     , polysemy-zoo
                     , algebraic-graphs
                     , time
                     , random
                     , deepseq
                     , polysemy-RandomFu
                     , mwc-random
                     , random-source
                     , vector
                     , containers
                     , multiset
                     , random-fu
                     , conduit
                     , bytestring
                     , directory
                     , filepath

test-suite arvy-tests
  import:              defaults
  other-modules:       AlgorithmSpec
                     , CollectionSpec
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       arvy
                     , arvy-eval
                     , hspec
                     , array
                     , polysemy
                     , polysemy-zoo
                     , random
                     , containers
                     , deepseq
                     , vector
                     , polysemy-RandomFu
                     , mwc-random
                     , pipes
                     , mono-traversable
                     , random-fu
