cabal-version:       2.4
name:                arvy
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          contact@infinisil.com
category:            Network

common defaults
  default-language:    Haskell2010
  ghc-options:         -Wall -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  build-depends:       base ^>= 4.12.0.0
                     , polysemy
                     , polysemy-plugin
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , LambdaCase
                     , QuantifiedConstraints
                     , AllowAmbiguousTypes
                     , RecordWildCards
                     , NamedFieldPuns
                     , KindSignatures
                     , BlockArguments
                     , MultiParamTypeClasses

library
  import:              defaults
  hs-source-dirs:      lib
  exposed-modules:     Arvy.Algorithm
                       Arvy.Algorithm.Collection
                       Arvy.Local
                       Arvy.Log
  build-depends:       text
                     , array
                     , mono-traversable
                     , polysemy-RandomFu
                     , random-fu
                     , containers
                     , co-log-core
                     , co-log

library arvy-eval
  import:              defaults
  hs-source-dirs:      eval
  exposed-modules:     Parameters
                     , Parameters.Weights
                     , Parameters.Tree
                     , Parameters.Requests
                     , Parameters.Algorithm
                     , Evaluation
                     , Evaluation.Plot
                     , Evaluation.Types
                     , Evaluation.Weights
                     , Evaluation.Tree
                     , Evaluation.Request
                     , Evaluation.Utils
                     , Utils
                     , Cache
  build-depends:       arvy
                     , polysemy-RandomFu
                     , random-fu
                     , mwc-random
                     , random-source
                     , deepseq
                     , array
                     , time
                     , vector
                     , algebraic-graphs
                     , containers
                     , multiset
                     , heaps
                     , conduit
                     , store
                     , directory
                     , filepath
                     , bytestring
                     , async
                     , Chart
                     , stm
                     , data-default-class
                     , Chart-cairo
                     , mono-traversable
                     , lens
                     , palette
                     , text

executable arvy
  import:              defaults
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-qg -N"
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , arvy
                     , arvy-eval
                     , array
                     , polysemy-zoo
                     , algebraic-graphs
                     , time
                     , random
                     , deepseq
                     , polysemy-RandomFu
                     , mwc-random
                     , random-source
                     , vector
                     , containers
                     , multiset
                     , random-fu
                     , conduit
                     , bytestring
                     , directory
                     , filepath
                     , co-log

executable arvy-demo
  import:              defaults
  other-modules:       Opts
  hs-source-dirs:      demo
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -fprof-auto
  build-depends:       base ^>=4.12.0.0
                     , arvy
                     , gloss
                     , arvy-eval
                     , array
                     , containers
                     , lens
                     , random-fu
                     , polysemy-RandomFu
                     , optparse-applicative
                     , heaps
                     , random

test-suite arvy-lib-tests
  import:              defaults
  other-modules:       RunArvySpec
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      lib-tests
  build-depends:       arvy
                     , hspec
                     , conduit
                     , mono-traversable
                     , polysemy-RandomFu
                     , random-fu
